syntax = "proto3";

package geo_stats.service.v1;

option go_package = "github.com/FOMBUS1/GeoTimeTracker/internal/pb/geo_stats_api";

import "models/geo_model.proto";
import "google/api/annotations.proto";

service GeoStatsService {
    // Получаем информацию о потраченном времени в конкретном месте за период
    rpc GetLocationStats (UserLocationRequests) returns (TimeSpentResponses) {
        option (google.api.http) = {
            post: "/get_location_stats"
            body: "*"
        };
    }

    // Получаем топ мест за период
    rpc GetTopTimeSpent (TimePeriodRequests) returns (TimeSpentResponses) {
        option (google.api.http) = {
            post: "/get_top_time_spent"
            body: "*"
        };
    }
}

enum Period {
    LAST = 0;
    DAY = 1;
    WEEK = 2;
    MONTH = 3;
    YEAR = 4;
}

message UserLocationRequests {
    repeated UserLocationRequest requests = 1;
}

message UserLocationRequest {
    uint64 user_id = 1;
    uint64 location_id = 2;
    Period period = 3;
}

message TimePeriodRequests {
    repeated TimePeriodRequest requests = 1;
}

message TimePeriodRequest {
    uint64 user_id = 1;
    Period period = 2;
    optional uint32 top_k = 3;
}

message LocationStat {
    uint64 location_id = 1;
    uint64 time_seconds = 2;
    Period period = 3;
}

message TimeSpentResponse {
    uint64 user_id = 1;
    repeated LocationStat stats = 2;
}

message TimeSpentResponses {
    repeated TimeSpentResponse responses = 1;
}